# go2_biped

./: README.md
go2_deploy_ros2/: init.sh
go2_deploy_ros2/ros2_ws/src/go2_sunrise/: package.xml  setup.cfg  setup.py
go2_deploy_ros2/ros2_ws/src/go2_sunrise/sunrise/: sunrise.launch.py
go2_deploy_ros2/ros2_ws/src/main_controller/: CMakeLists.txt  package.xml
go2_deploy_ros2/ros2_ws/src/main_controller/include/: biped_controller.hpp  gamepad.hpp  robot_state_interface.hpp  state_machine.hpp
go2_deploy_ros2/ros2_ws/src/main_controller/include/common/: common_types.hpp
go2_deploy_ros2/ros2_ws/src/main_controller/models/: scripted_state_estimator_cpu.pt  scripted_student_policy_cpu.pt
go2_deploy_ros2/ros2_ws/src/main_controller/src/: main_controller.cpp
go2_deploy_ros2/ros2_ws/src/uwb_hri/: CMakeLists.txt  package.xml
go2_deploy_ros2/ros2_ws/src/uwb_hri/src/: main.cpp
go2_learn/: pyproject.toml
go2_learn/legged_gym/: __init__.py
go2_learn/legged_gym/envs/: __init__.py
go2_learn/legged_gym/envs/base/: base_task.py
go2_learn/legged_gym/envs/go2/go2_biped_rm/: go2_biped_rm.py  go2_biped_rm_config.py
go2_learn/legged_gym/envs/go2/go2_biped_rm_student_quad/: go2_biped_rm_student_quad.py  go2_biped_rm_student_quad_config.py
go2_learn/legged_gym/scripts/: transfer_play_student_quad.py  transfer_play_teacher.py  transfer_train_student_quad.py  transfer_train_teacher.py
go2_learn/legged_gym/simulator/: __init__.py  simulator.py
go2_learn/legged_gym/utils/: __init__.py  math_utils.py  task_registry.py  utils.py
